k8s/app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meu-site
      version: v2
  template:
    metadata:
      labels:
        app: meu-site
        version: v2
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:1.0
          args:
            - "-text=🔵 Welcome to Version 2 (New Canary Feature)"
            - "-listen=:8080"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service-v2
spec:
  selector:
    app: meu-site
    version: v2
  ports:
    - port: 80
      targetPort: 8080
